# PETProcessing-fork2

./: .gitignore  README.md  image_derived_input_function.py  main.py  pyproject.toml  setup.py
Testing/: ctab_to_json.ipynb  gtmseg.ctab  gtmseg_ctab.json
docs/: cli_ref.rst  conf.py  index.rst  modules.rst  pet_cli.BIDS_utils.rst  pet_cli.bids_cli.rst  pet_cli.bids_utils.rst  pet_cli.blood_input.rst  pet_cli.cli.rst  pet_cli.cli_bids.rst  pet_cli.cli_graphical_analysis.rst  pet_cli.cli_graphical_plots.rst  pet_cli.cli_idif.rst  pet_cli.cli_parametric_images.rst  pet_cli.cli_partial_volume_correction.rst  pet_cli.cli_preproc.rst  pet_cli.cli_reference_tissue_models.rst  pet_cli.cli_tac_fitting.rst  pet_cli.cli_tac_interpolation.rst  pet_cli.graphical_analysis.rst  pet_cli.graphical_plots.rst  pet_cli.idif_necktangle.rst  pet_cli.image_derived_input_function.rst  pet_cli.image_io.rst  pet_cli.image_operations_4d.rst  pet_cli.image_visualization.rst  pet_cli.math_lib.rst  pet_cli.motion_corr.rst  pet_cli.parametric_images.rst  pet_cli.partial_volume_corrections.rst  pet_cli.preproc.rst  pet_cli.reference_tissue_models.rst  pet_cli.register.rst  pet_cli.symmetric_geometric_transfer_matrix.rst  pet_cli.tac_fitting.rst  pet_cli.tac_interpolation.rst  pet_cli.tcms_as_convolutions.rst  petpal.cli.brier_fdg_processing.rst  petpal.cli.cli_bids.rst  petpal.cli.cli_graphical_analysis.rst  (+42 more)
example_workflows/: __init__.py  process_PiB.py
img_reg_tools/: image_registration.py
pet_cli/: BIDS_utils.py  __init__.py  bids_cli.py  bids_utils.py  blood_input.py  cli.py  cli_bids.py  cli_graphical_analysis.py  cli_graphical_plots.py  cli_idif.py  cli_parametric_images.py  cli_partial_volume_correction.py  cli_preproc.py  cli_reference_tissue_models.py  cli_tac_fitting.py  cli_tac_interpolation.py  graphical_analysis.py  graphical_plots.py  image_derived_input_function.py  image_io.py  image_operations_4D.py  image_operations_4d.py  image_reg.py  image_visualization.py  math_lib.py  motion_corr.py  parametric_images.py  partial_volume_corrections.py  (+13 more)
pet_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+142 files in other folders)
